# ckb-bitcoin-spv-service

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yaml  docker.yml
src/: main.rs  prelude.rs  result.rs
src/cli/: deploy.rs  init.rs  mod.rs  serve.rs  sync.rs  watch.rs
src/components/: api_service.rs  bitcoin_client.rs  ckb_client.rs  mod.rs  spv_service.rs
src/components/api_service/: error.rs  mod.rs
src/components/storage/: mod.rs  prelude.rs  result.rs
src/components/storage/internal/: cache.rs  mmr.rs  mod.rs  reader.rs  writer.rs
src/components/storage/schemas/: columns.rs  keys.rs  mod.rs
src/constants/: mainnet.rs  mod.rs  testnet.rs
src/utilities/: key.rs  mod.rs  platform.rs  type_id.rs  value_parsers.rs
